fix instruction spacing

--- a/stylesheets/forms.css
+++ b/stylesheets/forms.css
@@ -263,7 +263,7 @@ form.wufoo {
         font-size: 14px;
         font-style: italic;
         font-weight: normal;
-        margin: 20px 0 40px; }
+        margin: 20px 15px 40px; }
       form.wufoo ul li.focused {
         background: none; }
         form.wufoo ul li.focused label {
